--- a/src/content/graphos/delivery/propose-changes.mdx
+++ b/src/content/graphos/delivery/propose-changes.mdx
@@ -170,15 +170,15 @@ For example, if the source variant schema includes a new type, unless the propos
 
 While working on a proposal and before requesting reviews from teammates, you may want to review the proposal yourself. See the [Review proposals](./review-proposals) article for how to review different aspects of a proposal and [provide commentary](./review-proposals/#add-comments) on it.
 
-## Change proposal stage
+## Change proposal status
 
-You can manually change the proposal's stage from the overview page by clicking **Edit stage**. You have the following choices:
+You can manually change the proposal's status from the overview page by clicking **Edit status**. You have the following choices:
 
-- **Draft**: default stage upon creation
+- **Draft**: default status upon creation
 - **Open for feedback**: signals the proposal is ready for review
 - **Closed**: signals the proposal is abandoned or suspended
   - Closed proposals cannot receive further revisions
-  - You can always reopen a proposal by resetting the stage to Draft or Open for feedback
+  - You can always reopen a proposal by resetting the status to Draft or Open for feedback
 
 <img
   src="../img/schema-proposals/edit-status.jpg"
@@ -186,7 +186,7 @@ You can manually change the proposal's stage from the overview page by clicking 
   alt="Schema proposals overview tab in Studio"
 />
 
-**Approved** and **Implemented** stages are automatically set once [necessary conditions](./schema-proposals#proposal-stages) have been met.
+**Approved** and **Implemented** statuses are automatically set once [necessary conditions](./schema-proposals#proposal-statuses) have been met.
 
 ## Request review
 
