--- a/src/content/graphos/delivery/configure-proposals.mdx
+++ b/src/content/graphos/delivery/configure-proposals.mdx
@@ -143,8 +143,6 @@ The minimum number of approvals a proposal must receive for its status to become
 </tbody>
 </table>
 
-Editing a proposal once created is l
-
 <Note>
 
 Changing the number of required approvals updates the status of existing proposals that aren't [**Closed** or **Implemented**](./propose-changes#change-proposal-status) based on whether their current number of approvals meets the new number of required approvals.
@@ -162,7 +160,7 @@ Additionally, [org and graph admins](../org/members/#organization-wide-member-ro
   alt="Coming soon"
 />
 
-### Default reviewers
+### Require default reviewer approval
 
 By default, _any_ team member's approval can contribute to the [minimum number of required approvals](#required-approvals).
 You can require at least one of the approvals to come from a [**default review**](#default-reviewers) by selecting **Make at least one default reviewer required**.
