--- a/src/content/graphos/delivery/implement-proposals.mdx
+++ b/src/content/graphos/delivery/implement-proposals.mdx
@@ -6,14 +6,53 @@ description: Pull GraphQL schema changes from schema proposals using Rover, vali
 
 <GraphOSEnterpriseRequired />
 
+This article describes actions the **Proposal implementation** and **publication** stages of the [schema proposal process](./schema-proposals#proposal-process).
+
+```mermaid
+graph LR
+    subgraph Approved ["Proposal implementation"]
+    direction LR
+    ApprovedStatus((Approved <br/> status))
+    Fetch["Fetch proposal and <br> implement locally"]
+    Push["Run checks on <br> local changes"]
+    Check[["GraphOS <br/> schema checks"]]
+    ApprovedStatus --> Fetch --> Push --> Check
+    end
+    class ApprovedStatus secondary;
+    class ApprovedStatus CircleSize50;
+    class Check tertiary;
+```
+
+```mermaid
+graph LR
+    subgraph Implemented ["Proposal publication"]
+    direction LR
+    Checks[["Schema checks <br/> pass"]]
+    Publish["Publish schema <br/> to GraphOS"]
+    Monitor[["GraphOS matches <br/> changes to proposals"]]
+    ImplementedStatus((Implemented <br/> status))
+    Checks --> Publish --> Monitor --> ImplementedStatus
+    end
+    class ImplementedStatus secondary;
+    class ImplementedStatus CircleSize50;
+    class Checks,Monitor tertiary;
+```
+
 Once a schema proposal is **Approved**, its changes need to be implemented.
 For those implementing the changes, [pulling the approved schema changes](#pull-subgraphs-schemas-with-rover) into their IDE is a great starting point.
 
-Once the changes are implemented—including updating resolvers and other supporting work—you can use the [schema checks process](#validate-changes-with-checks) to ensure that your organization only publishes changes that were part of an approved proposal.
+Once the changes are implemented—including updating resolvers and other supporting work—you can use [schema checks](#validate-changes-with-checks) to ensure that your organization only publishes changes that were part of an approved proposal.
+
+<MinVersion version="X.x">
 
 ## Pull proposed schemas with Rover
 
-You can pull a proposal's subgraph schemas using the [`rover subgraph fetch` command](/rover/commands/subgraphs/#subgraph-fetch). This command is also used to pull subgraph schemas from a variant. To pull a schema from a _proposal_, use the proposal's ID instead of a variant name.
+</MinVersion>
+
+You can pull a proposal's subgraph schemas using the [`rover subgraph fetch` command](/rover/commands/subgraphs/#subgraph-fetch). This command is also used to pull subgraph schemas from a variant. To pull a schema from a proposal:
+
+1. [Install](/rover/getting-started) `vX.x` or later of the Rover CLI.
+2. Run the `rover subgraph fetch` command using the proposal's ID instead of a variant name:
 
 ```bash disableLineNumbers=true
 rover subgraph fetch my-graph@p-101 --name subgraph
@@ -31,8 +70,8 @@ You cannot push schema changes to proposals with the `rover subgraph publish` co
 
 GraphOS provides [schema checks](./schema-checks) to help you identify breaking changes before you make them. You [run checks on local changes](./schema-checks#the-checks-lifecycle) before publishing them.
 
-Since schema checks [run on every revision](./propose-changes#schema-checks) in a proposal, if your last revision's checks pass, any changes you implement from a proposal should pass, too.
-Regardless, it's best to run checks before publishing changes to make sure no unintentional errors have been made.
+Since schema checks [run automatically on every revision](./propose-changes#schema-checks) in a proposal, if your last revision's checks pass, any changes you implement locally from a proposal should pass, too.
+Regardless, it's best to run checks before publishing changes to make sure no errors have crept in.
 
 ### Ensure changes match an approved proposal
 
@@ -44,7 +83,7 @@ You can [configure schema checks](./configure-proposals/#configure-schema-checks
   alt="Schema proposals settings in Studio"
 />
 
-Configuring the **Proposals** task's severity to **Error** ensures that only changes that have gone through the proposal process are published. You can set the severity to **Warning** if you want to be able to publish changes that haven't gone through the process but receive warnings about them.
+Configuring the **Proposals** task's severity to **Error** ensures that only changes that have gone through the proposal process can be published. By setting the severity to **Warning** you can publish changes that haven't gone through the proposal process but receive warnings about them.
 
 <Note>
 
@@ -68,12 +107,12 @@ Click **Ignore** to allow the Proposals task to succeed without matching approve
 
 ### Matching changes to proposals
 
-**Incoming changes and approved proposals don't need to match one-to-one.** For example, if you have an approved proposal with changes in multiple subgraphs, you can check each subgraph's changes separately. The changes still match and the check still passes even though the change doesn't encompass all changes in the approved proposal. Similarly, if a single proposal contains a large change in one subgraph that you want to divide into multiple checks, those will also match and pass.
+**Incoming changes and approved proposals don't need to match one-to-one.** For example, if you have an approved proposal with changes in multiple subgraphs, you can check each subgraph's changes separately. Each subgraph check still passes even though the change doesn't encompass all the approved proposal's changes. Similarly, if a single proposal contains a large change in one subgraph that you want to divide into multiple checks, those changes can match across multiple checks and each check passes.
 
 ## Publish changes to GraphOS
 
 Publishing changes that are part of a schema proposal uses the same [publishing steps](./publishing-schemas) as any other changes.
-When a schema published to a [proposal's source variant](./propose-changes/#start-a-proposal) contains changes that are in an open proposal, the corresponding [launch](./launches) appears in the proposal's activity log.
+When a schema published to a [proposal's source variant](./propose-changes/#start-a-proposal) contains changes that are in an **Approved**, **Open for Feedback**, or **Draft** proposal, the corresponding [launch](./launches) appears in the proposal's activity log.
 
 <img
   src="../img/schema-proposals/proposal-implementation-status.jpg"
@@ -92,6 +131,6 @@ When an **Approved** or **Open for feedback** proposal's changes have been fully
 <Note>
 
 - A proposal with **Draft** status can't become **Implemented**, even when all its changes are published. Once such a proposal's status is changed to **Open for feedback**, it automatically switches to **Implemented**.
-- **Implemented** proposals cannot receive further revisions, nor their status changed.
+- **Implemented** proposals cannot receive further revisions, nor their status be changed.
 
 </Note>
