--- a/src/content/graphos/delivery/review-proposals.mdx
+++ b/src/content/graphos/delivery/review-proposals.mdx
@@ -6,6 +6,22 @@ description: Review and provide feedback on GraphQL schema proposals in GraphOS 
 
 <GraphOSEnterpriseRequired />
 
+This article describes actions in the **Proposal review** stage of the [schema proposal process](./schema-proposals#proposal-process).
+
+```mermaid
+graph LR
+    subgraph Open4Feedback ["Proposal review"]
+    direction LR
+    Feedback((Open for <br/>feedback <br/> status))
+    Feedback1["Receive feedback "]
+    Feedback2["Address feedback "]
+    Approvals["Receive<br/>minimum approvals"]
+    Feedback --> Feedback1 --> Feedback2 --> Approvals
+    end
+    class Feedback secondary;
+    class Feedback CircleSize50;
+```
+
 ## Review a proposal
 
 Proposal creators and reviewers can review different aspects of a proposal from its four non-editor tabs in [GraphOS Studio](https://studio.apollographql.com?referrer=docs-content).
