--- a/src/content/graphos/delivery/schema-proposals.mdx
+++ b/src/content/graphos/delivery/schema-proposals.mdx
@@ -44,13 +44,82 @@ Before describing the details of this proposal process, it's helpful to understa
 
 ### Proposal statuses
 
-| Status            | Description                                                                                                                                                                                                     |
-| ----------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| Draft             | Default status upon creation and until the proposal is ready for review.                                                                                                                                        |
-| Open for feedback | Signals the proposal is ready for review.                                                                                                                                                                       |
-| Approved          | The [minimum number of reviewers](./configure-proposals#required-approvals) has approved the proposal.                                                                                                          |
-| Implemented       | All the proposal's changes have been [published](./publishing-schemas). <br/> <br/> - Implemented proposals cannot receive further revisions <br/> - Their status cannot be updated.                            |
-| Closed            | Signals the proposal is suspended or abandoned. <br/> <br/> - Closed proposals cannot receive further revisions. <br/> - You can reopen a proposal by setting the status to **Draft** or **Open for feedback**. |
+<table className="field-table">
+  <thead>
+    <tr>
+      <th>Status</th>
+      <th>Automatic or <br /> manually set</th>
+      <th>Description</th>
+    </tr>
+  </thead>
+
+<tbody>
+<tr>
+<td>
+
+##### Draft
+
+</td>
+<td>
+Automatic upon creation but can be <a href="./propose-changes#change-proposal-status">manually reset</a>
+</td>
+<td>
+Default status upon creation until the proposal is ready for review.
+</td>
+</tr>
+<tr>
+<td>
+
+##### Open for feedback
+
+</td>
+<td><a href="./propose-changes#change-proposal-status">Manual</a></td>
+<td>Signals the proposal is ready for review.</td>
+</tr>
+<tr>
+<td>
+
+##### Approved
+
+</td>
+<td>Automatic</td>
+<td>
+The{' '}
+<a href="./configure-proposals#required-approvals">
+minimum number of reviewers
+</a>{' '}
+has approved the proposal.
+</td>
+</tr>
+<tr>
+<td>
+
+##### Implemented
+
+</td>
+<td>Automatic</td>
+<td>
+All the proposal's changes have been{' '}
+<a href="./publishing-schemas">published</a>. <br />
+<br /> - Implemented proposals cannot receive further revisions <br /> -
+Their status cannot be updated.
+</td>
+</tr>
+<tr>
+<td>
+
+##### Closed
+
+</td>
+<td><a href="./propose-changes#change-proposal-status">Manual</a></td>
+<td>
+Signals the proposal is suspended or abandoned. <br />
+<br /> - Closed proposals cannot receive further revisions. <br /> - You
+can reopen a proposal by setting the status to <strong> Draft</strong> or <strong>Open for feedback</strong>.
+</td>
+</tr>
+</tbody>
+</table>
 
 A proposal doesn't have to progress linearly from **Draft** to **Implemented**. It may be **Closed** before returning to **Draft** and continuing through the process.
 
@@ -64,7 +133,7 @@ graph LR
     direction LR
     Creation["Start proposal"]
     DraftStatus(("Draft status"))
-    Edit["Edit subgraphs,  <br/> lint and save changes"]
+    Edit["Edit subgraphs, lint, <br/> save, and check changes"]
     Request["Request reviews"]
     Creation -->  DraftStatus --> Edit --> Request
     end
@@ -131,9 +200,10 @@ graph TB
 
 ## Next steps
 
-To learn more about each part of the process, refer to the following articles:
+To learn more about each stage in the process, refer to the following articles:
 
-- [Proposal configuration](./configure-proposals)
 - [Proposal creation](./propose-changes)
 - [Proposal review](./review-proposals)
 - [Proposal implementation and publication](./implement-proposals)
+
+Proposal default configurations let you start using them out of the box. If you want to finetune your graph's proposal process, including permissions, approval requirements, and more, check out [Proposal configuration](./configure-proposals).
