Add notification details

--- a/src/content/graphos/delivery/configure-proposals.mdx
+++ b/src/content/graphos/delivery/configure-proposals.mdx
@@ -192,7 +192,12 @@ See the [Implement approved proposals](./implement-proposals) article for more i
 
 ## Configure notifications
 
-By default, the following roles receive notifications on the following proposal actions:
+All team members receive email notifications for the following proposal actions:
+
+- Whenever you're selected as a review on a proposal, whether because you are a default reviewer, or you've been manually selected
+- Whenever you are @mentioned in a comment
+
+Additionally, the following roles receive notifications on the following proposal actions:
 
 |                 | Comments | Saved Revisions | Status Changes | Approvals |
 |-----------------|----------|-----------------|----------------|-----------|
