Updates from feedback

--- a/src/content/technotes/TN0044-graphql-and-rest-together.mdx
+++ b/src/content/technotes/TN0044-graphql-and-rest-together.mdx
@@ -116,8 +116,7 @@ flowchart LR
 As part of deciding an API strategy, there should be some high level goals set.
 
 ### Offer rapid self-service
-The biggest goal of any API strategy should be to enable consumers. In practice, this means having as low of friction as possible for consumers to 
-get started consuming your API. The more a consumer can self-serve, the better.
+The biggest goal of any API strategy should be to enable consumers. In practice, this means having as low of friction as possible for consumers to get started consuming your API. The more a consumer can self-serve, the better.
 
 ### Create an insulating contract
 The consumers of an API should be shielded from the complexities of the backing services and vise versa. Every effort should be made to reduce
@@ -188,9 +187,9 @@ Many API strategies start this way but very quickly get out of control. Every cl
 - ❌ "Fat" clients and inconsistent UX
 - ❌ Logic is thrown away on every client rewrite
 - ❌ Not rapid or self-service
-- ❌ Not an Insulating Contract
-- ❌ Does not Magnify Existing Investments
-- ❌ No Governance
+- ❌ Not an insulating contract
+- ❌ Does not magnify existing investments
+- ❌ No governance
 
 ### Backend For Frontend APIs (BFFs)
 ```mermaid
