Add link to Stewardship tech note

--- a/src/content/technotes/TN0044-graphql-and-rest-together.mdx
+++ b/src/content/technotes/TN0044-graphql-and-rest-together.mdx
@@ -128,6 +128,11 @@ Any effort investment into an API should have a positive impact to multiple use 
 ### Govern the middle layer
 An API should have a defined stewardship and governance model. Appropriate stakeholders should be represented as part of the governance model.
 
+<Tip>
+
+[Read More: Supergraph stewardship](/technotes/TN0025-supergraph-stewardship/)
+</Tip>
+
 ## Approaches to Growing Complexity
 ### Client Managed
 ```mermaid
