--- a/src/content/technotes/TN0044-graphql-and-rest-together.mdx
+++ b/src/content/technotes/TN0044-graphql-and-rest-together.mdx
@@ -130,7 +130,7 @@ An API should have a defined stewardship and governance model. Appropriate stake
 
 <Tip>
 
-[Read More: Supergraph stewardship](/technotes/TN0025-supergraph-stewardship/)
+Read more on [Supergraph stewardship](/technotes/TN0025-supergraph-stewardship/)
 </Tip>
 
 ## Approaches to Growing Complexity
